--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -20,4 +20,13 @@
   @return $px/750*100vw;
 }
 
-// ---------------------------
+// ---------- custom -------------
+body {
+  background: #f5f5f5;
+  font-size: 14px;
+  color: #222;
+}
+
+a {
+  color: #222;
+}
