--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -22,8 +22,8 @@
 
 // ---------- custom -------------
 body {
+  font: 14px/1.5 -apple-system, "PingFang SC", "Helvetica Neue", Helvetica, STHeiTi, sans-serif;
   background: #f5f5f5;
-  font-size: 14px;
   color: #222;
 }
 
